--- a/build.gradle
+++ b/build.gradle
@@ -4,7 +4,7 @@ buildscript {
     repositories {
         google()
         jcenter()
-        
+        mavenLocal()
     }
     dependencies {
         classpath 'com.android.tools.build:gradle:4.1.2'
